# myconex

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  __main__.py  buzlock_bot.py  config.py  install.ps1  install.sh  lessons.md  main.py  pyproject.toml  run_myconex.sh  start.sh
api/: __init__.py  server.py
cli/: __init__.py  ask.py  chat.py  ingest_conversations.py  seed_context.py  status.py
config/: lightweight_models.yaml  mesh_config.yaml  requirements.txt
core/: __init__.py  autonomous_loop.py  digest.py  mcp_client.py  metrics.py  notifications.py  novelty_scanner.py  plugin_loader.py  self_healer.py
core/agents/: code_agent.py  research_agent.py
core/classifier/: __init__.py  hardware.py
core/coordinator/: __init__.py  orchestrator.py
core/discovery/: __init__.py  mesh_discovery.py
core/gateway/: __init__.py  agentic_tools.py  api_gateway.py  chat_history_retriever.py  discord_gateway.py  mesh_gateway.py  python_repl.py  self_improvement.py
core/memory/: __init__.py  vector_store.py
core/messaging/: __init__.py  nats_client.py
dashboard/: app.py
docs/: DECISIONS.md  DISCORD_SETUP.md  TODO.md  bookmarks.json
docs/superpowers/plans/: 2026-03-26-installer.md  2026-03-26-service-discovery.md
docs/superpowers/specs/: 2026-03-26-installer-design.md  2026-03-26-service-discovery-design.md
install/: answers.yaml.example
install/lib/: detect.sh  profiles.sh  ui.sh
install/lib/steps/: config.sh  core.sh  dashboard.sh  discord.sh  gpu.sh  hermes.sh  hub_services.sh  integrations.sh  llm.sh  registration_agent.sh  systemd.sh
integrations/: __init__.py  dlam_client.py  document_ingester.py  email_ingester.py  fabric_client.py  github_ingester.py  gmail_reader.py  hermes_bridge.py  knowledge_store.py  moe_hermes_integration.py  notifier.py  podcast_ingester.py  rss_monitor.py  search_provider.py  signal_detector.py  youtube_ingester.py
mobile/: .env.example  capacitor.config.json  index.html  package.json  tailwind.config.js  vite.config.js
mobile/src/: App.jsx  index.css
orchestration/: __init__.py  agent_roster.py
orchestration/agents/: __init__.py  base_agent.py  context_manager.py  hermes_agent.py  rlm_agent.py
orchestration/workflows/: __init__.py  task_router.py
scripts/: download_models.sh  launch_brave_dlam.sh
services/: Dockerfile  Dockerfile.dashboard  docker-compose.yml
services/litellm/: config.yaml
services/nats/: nats.conf
services/ollama/: entrypoint.sh
services/qdrant/: config.yaml
services/redis/: redis.conf
spore/: __init__.py
spore/scripts/: gen_certs.sh  install.sh
spore/systemd/: myconex.service
tests/: __init__.py  test_agentic_loop.py  test_gateway.py  test_hardware.py  test_hardware_tiers.py  test_integrations.py  test_mesh_discovery.py  test_myconex.py  test_nats_client.py  test_new_features.py  test_service_discovery.py
tests/installer/: test_config.bats  test_detect.bats  test_helper.bash  test_install_flags.bats  test_profiles.bats  test_ui.bats
tools/: __init__.py  document_processor.py  intel_aggregator.py  sandbox_executor.py
